# hs-template

./: CHANGELOG.md  Makefile  README.md  cabal.project  flake.nix  hie.yaml  hs-template.cabal  stack.yaml  stack_lts-18.yaml  stack_nightly.yaml
.github/workflows/: cabal.yaml  cabal_8-10.yaml  cabal_9-0.yaml  cabal_9-2.yaml  cabal_ci.yaml  ci.yaml  ghc_8-10.yaml  ghc_9-0.yaml  ghc_9-2-2.yaml  ghc_9-2.yaml  nix.yaml  stack.yaml  stack_lts-18.yaml  stack_lts-19.yaml  stack_nightly.yaml  style.yaml  style_ci.yaml
nix/: cabal_8-10.nix  cabal_9-0.nix  cabal_9-2.nix  cabal_base.nix  ghc_base.nix  lib.nix  stack.nix  stack_base.nix  stack_lts-18.nix  stack_lts-19.nix  stack_nightly.nix
src/: Lib.hs
tools/: format.sh  haddock.sh  lint-refactor.sh  lint.sh
