cabal-version:      2.4
name:               hs-template
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1

copyright:          2022-2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/hs-template/
bug-reports:        https://github.com/tbidne/hs-template/issues
synopsis:           Template
description:        A Template
category:           Template
extra-source-files:
  .gitignore
  cabal.project
  README.md

extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/hs-template

common common-lang
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules: Lib
  build-depends:   base >=4.14.0.0 && <4.21
  hs-source-dirs:  src

executable hs-template
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , hs-template

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N
